# smithsonian-mcp-server

./: README.md  pyproject.toml  test_api.py
src/smithsonian_mcp_server/: __init__.py  server.py
