[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smithsonian-mcp-server"
version = "0.1.0"
description = "MCP server for accessing the Smithsonian Institution's Open Access API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Smithsonian MCP Server Contributors" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
smithsonian-mcp-server = "smithsonian_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smithsonian_mcp_server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
